[package]
name = "first_rust_poject"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui-winit = "0.29.1"
egui = "0.29.1"
rfd = "0.15.1"
windows = {version = "*", features = [
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
] }
regex = "1.11.1"
egui-dropdown = "0.11.0"
shellexpand = "3.1.0"
ms-detours = "4.0.3"
